<resources>
    <string name="app_name">Taste Atlas Skopje</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="UserNameTextView">Name</string>
    <string name="PasswordText">Password\n</string>
    <string name="UsernameTextField">Username</string>
    <string name="PasswordTextFiels">Password</string>
    <string name="Login_button">Login</string>
    <string name="signupText">Sign up</string>
    <string name="Login_text">Login</string>
    <string name="Register_text">Register</string>
    <string name="FirstNameTextView">First Name</string>
    <string name="LastNameTextView">Last Name\n</string>
    <string name="UsernameText">Username</string>
    <string name="PasswordTextFields">Enter password</string>
    <string name="Register_button">Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="don_t_have_an_account_sign_in">Don\'t have an account? Sign up</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="working_from">Working From</string>
    <string name="working_to">Working To</string>
    <string name="save_restaurant">Save Restaurant</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="view_details">View Details</string>
    <string name="add_food">Add Food</string>
    <string name="food_name">Name</string>
    <string name="category">Category</string>
    <string name="add_category">Add Food</string>
    <string name="add_new_category">+ Add New Category</string>
    <string name="price">Price</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="surname">Surname</string>
    <string name="user_name">Name</string>
    <string name="view_on_maps">Open Maps</string>
    <string name="edit_user_details">Edit User Details</string>
    <string name="save">Save</string>
    <string name="delete_user">Delete User</string>
    <string name="edit_restaurant_details">Edit Restaurant Details</string>
    <string name="delete_restaurant">Delete Restaurant</string>
    <string name="choose_from_gallery">Choose Photo from Gallery</string>
    <string name="log_visit">Add visit</string>
    <string name="add_review">Save Review</string>
    <string name="add_comment">Add Comment</string>
    <string name="title_search">Search</string>
    <string name="open_camera">Open Camera</string>
    <string name="view_menu">View Menu</string>
    <string name="add_food_review">Add Review</string>
    <string name="eligible_for_discount">You are eligible for a discount!</string>
    <string name="qr_code">QR Code</string>
    <string name="use_discount">Use Discount</string>
    <string name="view_discount">View Discount</string>
    <string name="edit_restaurant">Edit Restaurant</string>
    <string name="best_deals">Best Deals</string>
</resources>