<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginBottom="26dp"
    app:cardBackgroundColor="#ECECEC"
    app:cardCornerRadius="12dp"
    app:cardElevation="2dp"
    app:cardPreventCornerOverlap="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/restaurant_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:minHeight="48dp"
            android:textColor="#0F3923"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/restaurant_name" />

        <TextView
            android:id="@+id/restaurant_latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_name"
            android:hint="@string/latitude"/>

        <TextView
            android:id="@+id/restaurant_longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_latitude"
            android:hint="@string/longitude"/>

        <TextView
            android:id="@+id/restaurant_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_name"
            android:hint="@string/address"/>

        <TextView
            android:id="@+id/restaurant_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_address"
            android:hint="@string/phone_number"/>

        <TextView
            android:id="@+id/restaurant_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_phone_number"
            android:hint="@string/email"/>

        <TextView
            android:id="@+id/restaurant_working_from"
            android:layout_width="72dp"
            android:layout_height="41dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="1dp"
            android:ems="10"
            android:hint="@string/working_from"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toStartOf="@+id/restaurant_working_to"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_email" />

        <TextView
            android:id="@+id/restaurant_working_to"
            android:layout_width="68dp"
            android:layout_height="36dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:ems="10"
            android:hint="@string/working_to"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/restaurant_working_from"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_email" />

        <Button
            android:id="@+id/btnViewDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_details"
            android:onClick="onViewDetailsClicked"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_working_to"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="12dp"
            android:layout_marginRight="10dp"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
